--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,4 @@
 - Practice Git merge and rebase
 - Create a small sample project
 - Write documentation
+- Add task: Improve README with usage examples
