Add task: Implement feature 14

--- a/todo.txt
+++ b/todo.txt
@@ -6,4 +6,4 @@
 - Write unit tests
 - Write integration tests
 - Virtual Git Repositry project
-- Virtual Repositry project
+- Virtual Repositry project"Task14: Implement new feature"
