Add task: Implement feature 15

--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,4 @@
 - Write integration tests
 - Virtual Git Repositry project
 - Virtual Repositry project"Task14: Implement new feature"
+"Task15: Implement new feature" 
