Add Task: Implement new feature

--- a/todo.txt
+++ b/todo.txt
@@ -8,3 +8,4 @@
 - Virtual Git Repositry project
 - Virtual Repositry project"Task14: Implement new feature"
 "Task15: Implement new feature" 
+"Task16: Implement new feature" 
