Add Task: Implement feature

--- a/todo.txt
+++ b/todo.txt
@@ -9,3 +9,4 @@
 - Virtual Repositry project"Task14: Implement new feature"
 "Task15: Implement new feature" 
 "Task16: Implement new feature" 
+"Implement feature 17" 
